# flair-api-client-py

./: .env.example  .gitignore  .travis.yml  CONTRIBUTING.md  Dockerfile  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py  test_flair_api.py  test_real_api.py
flair_api/: __init__.py  client.py  schemas.py
flair_client/: __init__.py
